src/objects/License_Payments__c.object
<CustomObject>
    <description>License Payments</description>
    <fields>
        <fullName>CAD_Conversion_Rate__c</fullName>
        <inlineHelpText>Canadian Conversion Rate at the time of payment</inlineHelpText>
        <label>CAD Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Amount__c</fullName>
        <description>Created for Service Operations</description>
        <inlineHelpText>What the check amount was that was issued.</inlineHelpText>
        <label>Check Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <inlineHelpText>The number that is on the check that was issued, or if it was online. .</inlineHelpText>
        <label>Check Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_No__c</fullName>
        <inlineHelpText>The License No that is provided by the company issuing the license?</inlineHelpText>
        <label>License No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <inlineHelpText>What is the type of license?</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <inlineHelpText>License that the payments are applicable to.</inlineHelpText>
        <label>License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>License Payments</relationshipLabel>
        <relationshipName>License_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>Created for Service Operations</description>
        <inlineHelpText>The date the payment was sent.</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <inlineHelpText>What type of payment was made?</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USD_Equivalent_Payment__c</fullName>
        <inlineHelpText>The check amount that was issued</inlineHelpText>
        <label>Check Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_Equivalent_Payment__c</fullName>
        <formula>CAD_Conversion_Rate__c *  USD_Equivalent_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CAD Conversion Rate * USD Equivalent Amount</inlineHelpText>
        <label>US Equivalent Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>License Payment</label>
    <nameField>
        <displayFormat>DAALP-{00000}</displayFormat>
        <label>License Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>